--- a/design/themes/cart_power/css/styles.less
+++ b/design/themes/cart_power/css/styles.less
@@ -18,6 +18,9 @@
     @import "tygh/print.less";
 }
 
+//
+@import "my_styles.less";
+@import "addons/my_custom_styles.less";
 
 
 
@@ -2272,9 +2275,8 @@ Product temlates
     width: auto;
 }
 .ty-grid-list__item-name {
-    font-size: 40px;
-    margin-top: 10px;
-    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 15px;
     display: block;
     width: 100%;
     overflow: hidden;
