--- a/design/themes/cart_power/css/addons/my_styles.less
+++ b/design/themes/cart_power/css/addons/my_styles.less
@@ -1,6 +1,6 @@
 /* Изменение фона блока продуктов */
 .grid-list {
-    background-color: #f5f5f5;
+    background-color: #000000;
     padding: 20px;
 }
 
@@ -15,4 +15,13 @@
 .ty-grid-list__price {
     color: #28a745;
     font-size: 16px;
+}
+
+.ty-grid-list__image {
+    position: relative;
+    padding: 18px 0;
+    border: 1px solid #ebebeb;
+    background: #fc0000; //background of the thumb
+    text-align: center;
+    min-height: 50px;
 }
