--- a/design/themes/cart_power/css/styles.less
+++ b/design/themes/cart_power/css/styles.less
@@ -48,6 +48,7 @@ p {
     padding: 6px 0;
 }
 a {
+    
     font-family: @links_font;
     font-size: @links_font_size;
     font-weight: @links_font_weight;
@@ -1823,6 +1824,7 @@ WYSIWYG
 
 .our-brands-grid {
     margin-bottom: 80px;
+
 }
 .ty-order-summary {
     margin-top: 66px;
@@ -2230,9 +2232,9 @@ Product temlates
     .clearfix();
 
     &--overlay:hover {
-        border-color: #fb00ff00;
+        border-color: #fb00ff;
     }
-o
+
     &:hover {
 
         .ty-grid-list__control {
