откат модификаций ядра, подтянута верстка панели навигации

--- a/design/themes/cart_power/css/__css_backup/styles.pcl.css
+++ b/design/themes/cart_power/css/__css_backup/styles.pcl.css
@@ -1,5 +1,5 @@
-@import "my_styles.less";
-@import "addons/my_custom_styles.less";
+/* @import "my_styles.less";
+@import "addons/my_custom_styles.less"; */
 @font-face {
   font-family:'Open Sans';
   font-style: normal;
