--- a/design/themes/cart_power/css/__less_backup/styles.less
+++ b/design/themes/cart_power/css/__less_backup/styles.less
@@ -19,8 +19,8 @@
 }
 
 //
-@import "my_styles.less";
-@import "addons/my_custom_styles.less";
+// @import "my_styles.less";
+// @import "addons/my_custom_styles.less";
 
 
 
