--- a/design/themes/cart_power/css/styles.less
+++ b/design/themes/cart_power/css/styles.less
@@ -18,8 +18,8 @@
     @import "tygh/print.less";
 }
 
-@import "my_styles.less";
-@import "addons/my_custom_styles.less";
+// @import "my_styles.less";
+// @import "addons/my_custom_styles.less";
 
 
 /* ==========================================================================
